# hyperk-backend

./: .gitignore  alembic.ini  config.yaml.sample  createvm.py  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  start.sh
app/: db.py  main.py  settings.py  utils.py
app/api/auth/: schemas.py  use_cases.py  views.py
app/api/instance/: schemas.py  use_cases.py  views.py
app/api/vmm/: schemas.py  views.py
app/middleware/: auth.py
app/models/: __init__.py  instances.py  users.py
app/security/: auth.py
app/service/: ipbauth.py  jwtoken.py  virt.py
migrations/versions/: 087ed675fea3_init_empty.py  1631a60036d2_create_instance_table.py  2923986177bb_create_user_table.py
task/: inventory.conf  playbook.yml  template.xml
templates/: default.xml
