[project]
name = "hyperk-backend"
version = "0.1.0"
description = "Backend Service for HyperK"
authors = ["circleous <circleousdev@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[tool.yapf]
based_on_style = "google"

[tool.isort]
profile = "google"
src_paths = ["app", "tests"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
  "app.*"
]
ignore_missing_imports = true
follow_imports = "normal"
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.poetry]
name = "hyperk-backend"
version = "0.1.0"
description = "Backend Service for HyperK"
authors = ["circleous <circleousdev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
redis = {extras = ["hiredis"], version = "^4.6.0"}
httpx = "^0.24.1"
sqlalchemy = "^2.0.19"
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
itsdangerous = "^2.1.2"
requests-oauthlib = "^1.3.1"
async-cache = "^1.1.1"
pyjwt = "^2.7.0"
libvirt-python = "^9.5.0"
arq = "^0.25.0"
msgpack = "^1.0.5"

[tool.poetry.group.dev.dependencies]
yapf = "*"
isort = "*"
mypy = "*"
toml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
